<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_COM_FTL_SpdCntrl" Id="{8ca67dfa-c6ef-4ba2-9e27-b7b7b3b07324}">
    <Declaration><![CDATA[TYPE ST_COM_FTL_SpdCntrl :
STRUCT
	MaximumSpeed	: LREAL; //(KO, amount of sheets/min)
	RTO				: BOOL;	//FTL is Ready to Operate state
	Stop			: BOOL;
	ES				: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>