<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_COM_IMD_SpdCntrl" Id="{3ee94b66-e776-43f7-a205-1bb779b5b254}">
    <Declaration><![CDATA[TYPE ST_COM_IMD_SpdCntrl :
STRUCT
	Stopped				: BOOL;					// IMD is in stopped state
	RTO					: BOOL;					// IMD is Ready to Operate state
	BlowOffProcessedA	: ARRAY[1..4] OF BOOL;	// signal to confirm that the blowoff has actually happend for A side
	BlowOffProcessedB	: ARRAY[1..4] OF BOOL;	// signal to confirm that the blowoff has actually happend for B side
	FormingReadyA		: BOOL;					// signal to confirm that the forming has actually started for A side
	FormingReadyB		: BOOL;					// signal to confirm that the forming has actually started for B side
	GantryA_Ready		: BOOL; 				// signal that Gantry A is in position above the conveyor and ready to blow off
	GantryB_Ready		: BOOL; 				// signal that Gantry B is in position above the conveyor and ready to blow off
	ES					: BOOL;					// Emergency stop from the IMD that also need to stop the conveyor
	MaximumSpeed		: REAL;					// theoretical maximum speed with current settings
	ActualSpeed			: REAL;					// Number of KO's in last cycle
	HMI_Reset			: BOOL;					// MZE 20190311 For testing at LoodsLanghout
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>