<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_COM_SpdCntrl_FTL" Id="{98fd0c5b-175a-47d7-83fa-677364fdbf32}">
    <Declaration><![CDATA[TYPE ST_COM_SpdCntrl_FTL :
STRUCT
	ReadyToRun			: BOOL;
	ES					: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>