<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_BlowOffProdPar" Id="{f8fea391-0b71-4584-94b6-1221ac224a17}">
    <Declaration><![CDATA[TYPE ST_BlowOffProdPar :
STRUCT
	PitchGantry					: DINT;	//Pitch distance between sheets on gantry
	NrOfSheets					: DINT;	//Amount of sheets used on IMD
	NrOfCavities				: DINT;  // The amount of cavities (products) in one sheet.
	Modulo						: LREAL; //System parameter (5180)
	ModuloOffsetSensorFree		: REAL; //Offset on the modulo to start measuring if the pitch is free for dropping
	ModuloDetectionSensorFree	: REAL;	//How long the sensor needs to be active before alarm/skipping blow off based on modulo length
	SheetSize					: REAL;	//The width of a sheet
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>