<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ConveyorMachPar" Id="{eb6633a0-2fd1-4292-8b9c-efe8a470c148}">
    <Declaration><![CDATA[TYPE ST_ConveyorMachPar :
STRUCT
	VelocityManual						: LREAL;
	VelocityAuto						: LREAL;
	InitSpeed							: LREAL;
	ModuloRamp							: DINT;	
	IMD1_Enabled						: BOOL;
	IMD2_Enabled						: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>