<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ConveyorSysPar" Id="{4699766f-7975-400a-a6a4-0cf6405b36bd}">
    <Declaration><![CDATA[TYPE ST_ConveyorSysPar :
STRUCT
	Belt					: ST_NcAxis_SysPar;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>